Fixed readability on mobile.

--- a/docs/html/_static/custom.css
+++ b/docs/html/_static/custom.css
@@ -13,3 +13,7 @@ div.bodywrapper {
 ul {
     border: 0;
 }
+
+div.body{
+    min-width: 50px;
+}
